tests/variant_flow/downcast_in_switch_place_without_refinement.err.expected
error: at 6:17: [VF-DowncastVariantNotRefined] In function 'f', block 'entry': cannot downcast 'o as X' here: 'o' is not refined to variant 'X'
   |
 6 |                 switchEnum(o as X) [P: pb, Q: qb]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
